--- a/main.tex
+++ b/main.tex
@@ -1,23 +1,43 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass{article}
 \usepackage[slovak]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+\usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
 \title{Analýza dopadu umelej inteligencie na trh práce v Európskej únii}
+\author{
+Jakub Šroba xsroba@stuba.sk \\
+\and
+Samuel Škombár xskombar@stuba.sk \\ 
+\and
+Bruno Stehlík xstehlik@stuba.sk \\ 
+\and
+Adam Sklenčík xsklencik@stuba.sk \\ 
+}
 
 \begin{document}
-
 \maketitle
 
-
-\begin{center}
-  Akronym: \textbf{LITTLETON} 
-\end{center}
-\begin{acronym}
-
+\begin{abstract}
 Rozvoj umelej inteligencie prináša nové možnosti pre ľudí pôsobiacich v oblasti IT. Vznikajú nové profesie. Firmy majú prístup k nástrojom, ktoré dokážu automatizovať rutinné úlohy alebo zlepšiť efektivitu procesov.
 
 Na druhej strane však tento technologický pokrok vedie k úpadku určitých pracovných pozícií, najmä tých, ktoré sú ľahko automatizovateľné. Naším cieľom je vytvoriť prehľadný portál pre vizualizáciu zmeny pracovného trhu v EÚ v súvislosti s rozvojom AI.
 
 Analyzovať, či dané odvetvia rastú alebo klesajú práve kvôli AI a automatizácii, a poskytovať interaktívne grafy, datasety a doplnkové analýzy pre tvorcov politík, výskumníkov a verejnosť.
 
+\end{abstract}
+
+\section{Úvod}
+
+Your introduction goes here! Simply start writing your document and use the Recompile button to view the updated PDF preview. Examples of commonly used commands and features are listed below, to help you get started.
+
+\section{Some examples to get started}
+
+\subsection{How to create Sections and Subsections}
+
+Simply use the section and subsection commands, as in this example document! With Overleaf, all the formatting and numbering is handled automatically according to the template you've chosen. If you're using the Visual Editor, you can also create new section and subsections via the buttons in the editor toolbar.
+
+\subsection{How to include Figures}
+
+
+\end{document}
