--- a/prez.tex
+++ b/prez.tex
@@ -86,7 +86,7 @@ Adam Sklenčík xsklencik@stuba.sk \\
 	Fakulta informatiky a informačných technológií
     }
 
-\title{Analýza dopadu AI na trh práce
+\title{LITTLETON: Analýza dopadu AI na trh práce
 }
 
 \date{\footnotesize 1.sem 2025}
@@ -104,9 +104,7 @@ Adam Sklenčík xsklencik@stuba.sk \\
 \begin{frame}[fragile=singleslide]
 \frametitle{Úvod}
 \begin{itemize}
-    \item Apple
-    \item Banana
-    \item Cherry
+sem musime dat o com je nas projekt
 \end{itemize}
 \end{frame}
 
