Update sources.bib with new references and corrections

--- a/sources.bib
+++ b/sources.bib
@@ -1,6 +1,6 @@
 @misc{hiringlab-ai-tracker,
   author       = {Indeed Hiring Lab},
-  title        = {AI Tracker: AI\_posting.csv},
+  title        = {AI Tracker: AI_posting.csv},
   year         = {2025},
   howpublished = {\url{https://github.com/hiring-lab/ai-tracker/blob/main/AI_posting.csv}},
   note         = {Dátum prístupu: 06.11.2025}
@@ -20,4 +20,46 @@
   year         = {2025},
   howpublished = {\url{https://www.kaggle.com/datasets/sahilislam007/ai-impact-on-job-market-20242030}},
   note         = {Dátum prístupu: 06.11.2025}
+}
+
+@misc{ilo,
+  author       = {International Labour Organization},
+  title        = {Artificial intelligence adoption and its impact on jobs},
+  year         = {2025},
+  howpublished = {\url{https://www.ilo.org/publications/artificial-intelligence-adoption-and-its-impact-jobs}},
+  note         = {Dátum prístupu: 06.11.2025}
+}
+
+
+%nove/////////////////////////////////////////////////////////////////
+@misc{linkedin-api,
+  author       = {LinkedIn},
+  title        = {LinkedIn Jobs API},
+  year         = {2025},
+  howpublished = {\url{https://developer.linkedin.com/docs/rest-api/jobs}},
+  note         = {Dátum prístupu: 09.11.2025}
+}
+
+@misc{github-api,
+  author       = {GitHub},
+  title        = {GitHub Jobs API},
+  year         = {2025},
+  howpublished = {\url{https://jobs.github.com/api}},
+  note         = {Dátum prístupu: 09.11.2025}
+}
+
+@misc{eurostat-api,
+  author       = {Eurostat},
+  title        = {Eurostat API},
+  year         = {2025},
+  howpublished = {\url{https://ec.europa.eu/eurostat/web/main/data/web-services}},
+  note         = {Dátum prístupu: 09.11.2025}
+}
+
+@misc{udemy-api,
+  author       = {Udemy},
+  title        = {Udemy API},
+  year         = {2025},
+  howpublished = {\url{https://www.udemy.com/developers/}},
+  note         = {Dátum prístupu: 09.11.2025}
 }
